fix badges on mobile for new icon size

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -440,7 +440,7 @@
        width: 100vw;
 
        & .badge {
-           right: 5rem;
+           right: 7rem;
        }
     }
 } 
